test/invalid/baseline/duplicate.txt
Syntax error at line 3, since `interface Test`:
interface Test {
               ^ The name "Test" of type "typedef" was already seen
